<resources>
    <string name="app_name">TipCalculator</string>
    <string name="textTitle">Tip Calculator</string>
    <string name="billInput">Cost of Bill</string>
    <string name="btnCalculate">Calculate Tip</string>
    <string name="prompt">Select Tip Percentage</string>
    <string name="moneyImage">Money Image</string>
    <string-array name="tipGroup">
        <item>5%</item>
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
        <item>25%</item>
    </string-array>
</resources>
